statistics section fix color contrast

--- a/style/_statistics.scss
+++ b/style/_statistics.scss
@@ -15,7 +15,7 @@
         }
 
         p {
-            color: $grayish-violet;
+            color: #595959;
         }
     }
 
@@ -41,7 +41,7 @@
         }
 
         p {
-            color: $grayish-violet;
+            color: #595959;
         }
 
         .img_bg {
